custom domain live

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,11 +1,8 @@
 ---
 layout: default
-title: Projects
+title: 
 permalink: /projects/
 weight: 2
-remote_projects:
-  - git-for-wizards
-  - arduino-visitor-counter
 ---
 
 {% include projects/index.html %}
